# pyrex

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
docs/: demo.md
docs/internal/: DOCUMENTATION.md  README.md  REPORT.md
docs/internal/build-notes/: pyrex prompt.md
pyrex/: __init__.py  cli.py  models.py  regression.py  report.py  roofline.py  runner.py  store.py  telemetry.py
pyrex/backends/: __init__.py  base.py  mlx_backend.py  onnx_rt.py  pytorch_cpu.py  pytorch_mps.py
pyrex/kernels/: __init__.py  attention.py  conv2d.py  embedding.py  ffn.py  layernorm.py  matmul.py
results/: 1a0de60b.json  1a0de60b_report.html  1cfeeb34.json  1cfeeb34_report.html  314a55ea.json  492f9a3a.json  703bceeb.json  7f5046aa.json  7f5046aa_report.html  afc3f009.json  c8742d17.json  pyrex.duckdb
tests/: conftest.py  test_kernels.py  test_regression.py  test_roofline.py  test_runner.py  test_store.py  test_telemetry.py
