[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrex"
version = "0.1.0"
description = "Cross-Backend ML Inference Benchmark Suite"
requires-python = ">=3.11"

[project.scripts]
pyrex = "pyrex.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
